# spanner-analytics

./: .gitignore  CONTRIBUTING.md  README.md  package_test.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build-test.yml  publish-to-test-pypi.yml  run-pytest.yml
samples/: README.md  Text Embeddings using Spanner's DBAPI Driver.ipynb  Using Spanner with Machine Learning.ipynb
spanner_analytics/: __init__.py  conftest.py  database.py  database_test.py  magic.py  magic_test.py  test_notebook.ipynb
