[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spanner_analytics"
version = "1.0.0"
dependencies = [
    "google-cloud-spanner",
    "google-auth",
    "numpy",
    "pandas"
]
readme = "README.md"

[project.optional-dependencies]
test = [
  "pytest",
  "nbformat"
]
magic = [
  "ipython"
]

[project.urls]
Homepage = "https://github.com/cloudspannerecosystem/spanner-analytics"
